Fix text overflow to hidden for windows machine

--- a/app/assets/stylesheets/checkin_index.scss
+++ b/app/assets/stylesheets/checkin_index.scss
@@ -116,7 +116,8 @@
   height: 100px;
   font-size: 18px;
   padding-right: 22px;
-  // text-overflow: scroll;
+  text-overflow: hidden;
+  overflow: hidden;
   // white-space: nowrap;
-  overflow: scroll;
+  // overflow: scroll;
 }
